Fixed scroll on categories page on smaller screens

--- a/Trivia-app/src/components/categories.module.css
+++ b/Trivia-app/src/components/categories.module.css
@@ -1,25 +1,25 @@
 h1 {
-    margin-top: 10rem;
+  margin-top: 12vh;
 }
 
 .categories {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    width: 80%;
-    height: 20rem;
-    margin-inline: auto;
-    gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  width: 80%;
+  height: 20rem;
+  margin-inline: auto;
+  gap: 1rem;
 }
 
 .categories-info {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .category {
-    margin-block: auto;
-    border: 1px solid white;
-    border-radius: .5rem;
-    padding: 2rem 1rem;
-    cursor: pointer;
-    color: white;
+  margin-block: auto;
+  border: 1px solid white;
+  border-radius: 0.5rem;
+  padding: 2rem 1rem;
+  cursor: pointer;
+  color: white;
 }
