--- a/Trivia-app/src/components/utils/container.module.css
+++ b/Trivia-app/src/components/utils/container.module.css
@@ -1,9 +1,10 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-height: 100vh;
 }
 
 .container h1 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
